--- a/app/src/main/res/layout/fragment_activity_summary.xml
+++ b/app/src/main/res/layout/fragment_activity_summary.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,9 +13,10 @@
             android:id="@+id/sup_actsum_appbarlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/md_yellow_600"
+            android:background="@color/colorPrimaryLight"
 
             >
+<!--            android:background="@color/colorSecondary"-->
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/sup_actsum_tablayout"
