--- a/app/src/main/res/drawable/background_rounded_primarylight.xml
+++ b/app/src/main/res/drawable/background_rounded_primarylight.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ddeeeeee"/>
-    <corners android:radius="20dip"/>
+    <solid android:color="#ECF5FE"/>
+    <corners android:radius="15dip"/>
     <padding
         android:bottom="0dip"
         android:left="0dip"
         android:right="0dip"
         android:top="0dip"/>
-
 
 
 </shape>
