--- a/app/src/main/res/drawable/background_rounded_white_lined.xml
+++ b/app/src/main/res/drawable/background_rounded_white_lined.xml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#ffffff"/>
     <corners android:radius="20dip"/>
     <padding
         android:bottom="-20dip"
         android:left="8dip"
         android:right="8dip"
         android:top="-20dip"/>
-
-    <solid
+    <stroke
+        android:width="1dip"
         android:color="@color/colorPrimaryDark"
         />
 
-
-    <stroke
-        android:width="5dip"
-        android:color="@color/colorPrimaryDark"/>
-
-
-
-    
 </shape>
