--- a/app/src/main/res/drawable/rounded_button_lined_lightprimarycolor.xml
+++ b/app/src/main/res/drawable/rounded_button_lined_lightprimarycolor.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <corners android:radius="20dip"/>
+    <corners android:radius="10dip"/>
     <padding
         android:bottom="-20dip"
         android:left="8dip"
         android:right="8dip"
         android:top="-20dip"/>
 
-    <solid
-        android:color="@color/colorPrimaryDark"
-        />
-
-
     <stroke
-        android:width="5dip"
-        android:color="@color/colorPrimaryDark"/>
+        android:width="1dip"
+        android:color="#D9EEFC"/>
 
 
 
