--- a/app/src/main/res/drawable/rounded_button_lined_primarycolor.xml
+++ b/app/src/main/res/drawable/rounded_button_lined_primarycolor.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ddeeeeee"/>
-    <corners android:radius="20dip"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+    <corners android:radius="10dip"/>
     <padding
         android:bottom="-20dip"
         android:left="8dip"
         android:right="8dip"
         android:top="-20dip"/>
+
     <stroke
         android:width="1dip"
-        android:color="@color/colorAccent"
-        />
+        android:color="@color/colorPrimary"/>
 
+
+
+    
 </shape>
