Supervisor Mode finished AND SUbject Mode [comfort and classic] finished

--- a/app/src/main/res/drawable/background_rounded_secondlight_lined.xml
+++ b/app/src/main/res/drawable/background_rounded_secondlight_lined.xml
@@ -8,6 +8,9 @@
         android:right="0dip"
         android:top="0dip"/>
 
-
+    <stroke
+        android:width="1dip"
+        android:color="@color/colorSecondaryLight"
+        />
 
 </shape>
