--- a/app/src/main/res/drawable/background_rounded_primarydarktranslucent.xml
+++ b/app/src/main/res/drawable/background_rounded_primarydarktranslucent.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFF7EB"/>
+    <solid android:color="#D92286c3"/>
     <corners android:radius="15dip"/>
     <padding
         android:bottom="0dip"
         android:left="0dip"
         android:right="0dip"
         android:top="0dip"/>
-
-
+<!--    #19647E-->
 
 </shape>
