--- a/app/src/main/res/layout/fragment_act_sum_tab.xml
+++ b/app/src/main/res/layout/fragment_act_sum_tab.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/frame_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ActSumTabFragment">
+    tools:context=".fragments.ActSumTabFragment"
+    android:background="@color/white">
 
 <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
 <!--        android:id="@+id/actsum_nav_menu"-->
@@ -16,6 +19,7 @@
 
 
 <LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -48,5 +52,6 @@
 
 
 </LinearLayout>
+
 
 </RelativeLayout>
