--- a/app/src/main/res/layout/fragment_actsum_pastweek_.xml
+++ b/app/src/main/res/layout/fragment_actsum_pastweek_.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.actsum_pastweek_Fragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white"
+    >
 
     <com.github.mikephil.charting.charts.PieChart
+        android:layout_weight="1"
         android:id="@+id/subj_week_piechart"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="match_parent"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="5dp"
@@ -20,12 +23,10 @@
     </com.github.mikephil.charting.charts.PieChart>
 
     <LinearLayout
+        android:layout_weight="1.5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:background="@drawable/background_rounded_primarylight"
         >
         <LinearLayout
@@ -34,7 +35,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -44,17 +45,20 @@
                 <ImageView
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/vec_standing_sitting"
                     app:tint="@color/colorSecondary"
-                    android:gravity="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     >
 
                 </ImageView>
 
-            </LinearLayout>
-            <LinearLayout
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -65,16 +69,20 @@
                 <ImageView
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/vec_walking"
                     app:tint="@color/colorSecondaryLight"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:gravity="center">
 
                 </ImageView>
 
-            </LinearLayout>
-            <LinearLayout
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -83,14 +91,18 @@
                 <ImageView
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/vec_lying"
                     app:tint="@color/colorSecondaryDark"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:gravity="center">
 
                 </ImageView>
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
         <LinearLayout
@@ -109,7 +121,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Loading duration..">
+                    android:text="Loading duration.."
+                    android:textSize="@dimen/font_size_older_normal">
 
                 </TextView>
 
@@ -126,7 +139,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Loading duration..">
+                    android:text="Loading duration.."
+                    android:textSize="@dimen/font_size_older_normal">
 
                 </TextView>
 
@@ -141,7 +155,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Loading duration..">
+                    android:text="Loading duration.."
+                    android:textSize="@dimen/font_size_older_normal">
 
                 </TextView>
 
