--- a/app/src/main/res/layout/fragment_live_act_tab.xml
+++ b/app/src/main/res/layout/fragment_live_act_tab.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+
+<RelativeLayout
+    android:id="@+id/frame_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.LiveActTabFragment"
+    android:background="@color/white"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_marginBottom="25dp"
             android:orientation="horizontal"
             >
 
@@ -26,82 +32,85 @@
                 android:layout_weight="1"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="60dp"
-                android:background="@drawable/background_rounded_lightgrey"
-                android:orientation="vertical"
-
-                >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:paddingRight="5dp"
-                    android:text="Breath Rate Per Min:"
-                    android:gravity="center"
-                    android:textSize="25dp"/>
-
-                <ImageView
-                    android:id="@+id/sbj_activity_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/vec_standing_sitting"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text=""
-                    android:gravity="center"
-                    android:textSize="25dp"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="60dp"
-                android:background="@drawable/background_rounded_lightgrey"
-                android:orientation="vertical"
-                >
+                android:layout_marginTop="30dp"
+                android:orientation="vertical">
+
+            >
 
                 <TextView
+                    android:id="@+id/live_act_t1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:paddingRight="5dp"
-                    android:text="Breath Rate Per Min:"
-                    android:gravity="center"
-                    android:textSize="25dp"/>
+                    android:layout_marginLeft="10dp"
+                    android:text="Detected Activity:"
+                    android:gravity="left|center_vertical"
+                    android:textSize="@dimen/font_size_older_normal"/>
 
-                <TextView
-                    android:id="@+id/sbj_text_breathing_average"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="-.- BrPM"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/text_size_bpm_large"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text=""
-                    android:gravity="center"
-                    android:textSize="25dp"/>
+                    android:orientation="horizontal">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginRight="6dp"
+                        android:background="@drawable/background_rounded_primarylight">
+
+                        <ImageView
+                            android:id="@+id/sbj_activity_icon"
+                            android:layout_width="90dp"
+                            android:layout_height="100dp"
+                            android:layout_gravity="center|center_vertical"
+
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/vec_standing_sitting" />
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_marginLeft="6dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/background_rounded_primarydark_border">
+
+                        <TextView
+                            android:id="@+id/activity_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textSize="@dimen/font_size_older_normal"
+                            android:gravity="center"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent">
+
+                        </TextView>
+
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </LinearLayout>
+
+
+
+
+
 
             </LinearLayout>
+
+
 
         </LinearLayout>
 
@@ -112,26 +121,58 @@
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/background_rounded_lightgrey"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             >
 
             <TextView
+                android:id="@+id/live_act_t5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:text="Duration RESpeck worn today:"
-                android:gravity="center"
-                android:textSize="25dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:layout_marginLeft="10dp"
+                android:text="Breath per Minute:"
+                android:gravity="left|center_vertical"
+                android:textSize="@dimen/font_size_older_normal"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_weight="1"
-                android:layout_marginBottom="30dp"
-                android:text="00h:00m:00s"
-                android:gravity="center"
-                android:textSize="@dimen/text_size_bpm_large"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/sbj_text_breathing_average"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="30dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="15dp"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/background_rounded_secondlight"
+                    android:textSize="@dimen/font_size_older_title"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BPM"
+                    android:layout_marginRight="60dp"
+                    android:textSize="@dimen/font_size_older_secondary"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:gravity="center_vertical"
+                    app:layout_constraintBottom_toBottomOf="parent
+
+">
+
+                </TextView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
 
@@ -140,11 +181,20 @@
 
     </LinearLayout>
 
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+
+<!--        android:id="@+id/bot_nav_menu"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:background="?attr/colorPrimaryDark"-->
+<!--        app:labelVisibilityMode="labeled"-->
+
+<!--        app:menu="@menu/tab_nav_menu_subjecthome" />-->
 
 
 
 
 
 
-
-</FrameLayout>
+</RelativeLayout>
