--- a/app/src/main/res/layout/fragment_subject_home2.xml
+++ b/app/src/main/res/layout/fragment_subject_home2.xml
@@ -15,8 +15,6 @@
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        android:layout_above="@id/bot_nav_menu"
         >
 
         <LinearLayout
@@ -61,7 +59,7 @@
                         android:layout_height="25dp"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
+                        app:srcCompat="@drawable/ic_baseline_pie_chart_24"
                         app:tint="@color/colorSecondary"
                         >
 
@@ -284,6 +282,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/ic_lungs__1_"
                                 app:tint="@color/colorSecondaryDark"
                                 >
 
@@ -297,7 +296,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:orientation="horizontal"
-                           >
+                            >
 
                             <TextView
                                 android:id="@+id/home_breathrate"
@@ -471,22 +470,319 @@
 
     </FrameLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-
-        android:id="@+id/bot_nav_menu"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        app:labelVisibilityMode="labeled"
-        android:background="@color/colorPrimaryDark"
-        app:itemTextColor="@drawable/selector"
-        app:itemIconTint="@drawable/selector"
-        app:itemTextAppearanceActive="@style/navTextActive"
-        app:itemTextAppearanceInactive="@style/navTextInactive"
-        app:menu="@menu/tab_nav_menu_subjecthome" />
-
 
 
 </RelativeLayout>
-<!--    app:itemBackground="@color/colorPrimaryDark"-->
-<!--    app:itemTextColor="@drawable/selector"-->
+
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+
+<!--<RelativeLayout-->
+
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:orientation="vertical"-->
+<!--    tools:context=".fragments.SubjectValuesFragment">-->
+
+<!--    <FrameLayout-->
+<!--        android:id="@+id/frame_container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center_horizontal"-->
+<!--            android:orientation="vertical"-->
+<!--            android:weightSum="1">-->
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/sensor_container"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/background_rounded_lightgrey"-->
+<!--                android:orientation="vertical"-->
+<!--                android:padding="30dp">-->
+
+
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/respeck_connection_container"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:gravity="center"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <ImageButton-->
+<!--                        android:id="@+id/respeck_pause_button"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:background="@drawable/clickable_button_background"-->
+<!--                        android:padding="15dp"-->
+<!--                        android:src="@drawable/ic_pause_black_24dp" />-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/activity_icon"-->
+<!--                        android:layout_margin="5dp"-->
+<!--                        android:layout_width="60dp"-->
+<!--                        android:layout_height="60dp"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        app:srcCompat="@drawable/vec_standing_sitting"-->
+<!--                        />-->
+
+<!--                    <ImageView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:layout_marginStart="10dp"-->
+<!--                        android:layout_marginEnd="20dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:foregroundGravity="center"-->
+<!--                        app:srcCompat="@drawable/vec_respeck" />-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="65dp"-->
+<!--                        android:layout_height="85dp"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
+
+<!--                        <ProgressBar-->
+<!--                            android:id="@+id/progress_bar_respeck"-->
+<!--                            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:layout_gravity="center_vertical"-->
+<!--                            android:visibility="visible" />-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/connected_status_respeck"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:visibility="gone"-->
+<!--                            app:srcCompat="@drawable/vec_wireless_active" />-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/not_enabled_respeck"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:src="@drawable/vec_xmark"-->
+<!--                            android:visibility="gone" />-->
+
+<!--                        <LinearLayout-->
+<!--                            android:id="@+id/battery_container_respeck"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:gravity="fill_vertical|center"-->
+<!--                            android:orientation="horizontal"-->
+<!--                            android:visibility="visible">-->
+
+<!--                            <TextView-->
+<!--                                android:id="@+id/respeck_battery_level"-->
+<!--                                android:layout_width="0dp"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_weight="1"-->
+<!--                                android:text="2%"-->
+<!--                                android:textAlignment="textEnd"-->
+<!--                                android:textSize="15sp" />-->
+
+<!--                            <ImageView-->
+<!--                                android:id="@+id/battery_image"-->
+<!--                                android:layout_width="0dp"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:layout_weight="1"-->
+<!--                                android:src="@drawable/ic_battery_full" />-->
+
+<!--                        </LinearLayout>-->
+
+
+<!--                    </LinearLayout>-->
+
+<!--                </LinearLayout>-->
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/airspeck_connection_container"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_marginTop="40dp"-->
+<!--                    android:gravity="center"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <ImageButton-->
+<!--                        android:id="@+id/airspeck_off_button"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:background="@drawable/clickable_button_background"-->
+<!--                        android:padding="15dp"-->
+<!--                        android:src="@drawable/ic_power_settings_new_black_24dp" />-->
+
+<!--                    <ImageView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:layout_marginStart="10dp"-->
+<!--                        android:layout_marginEnd="20dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:srcCompat="@drawable/ic_airspeck_new" />-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="65dp"-->
+<!--                        android:layout_height="85dp"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
+
+<!--                        <ProgressBar-->
+<!--                            android:id="@+id/progress_bar_airspeck"-->
+<!--                            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:layout_gravity="center_vertical"-->
+<!--                            android:visibility="visible" />-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/connected_status_airspeck"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:visibility="gone"-->
+<!--                            app:srcCompat="@drawable/vec_wireless_active" />-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/not_enabled_airspeck"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:src="@drawable/vec_xmark"-->
+<!--                            android:visibility="gone" />-->
+
+<!--                        <LinearLayout-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:gravity="fill_vertical|center"-->
+<!--                            android:orientation="horizontal"-->
+<!--                            android:visibility="invisible">-->
+
+<!--                            <TextView-->
+<!--                                android:layout_width="0dp"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_weight="1"-->
+<!--                                android:text="92%"-->
+<!--                                android:textSize="15sp" />-->
+
+<!--                            <ImageView-->
+<!--                                android:layout_width="0dp"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:layout_weight="1"-->
+<!--                                android:src="@drawable/ic_battery_full" />-->
+
+<!--                        </LinearLayout>-->
+
+
+<!--                    </LinearLayout>-->
+
+<!--                </LinearLayout>-->
+
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/buttons_container"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:gravity="center"-->
+<!--                android:orientation="vertical"-->
+<!--                android:padding="30dp">-->
+
+<!--                <ImageButton-->
+<!--                    android:id="@+id/diary_button"-->
+<!--                    android:layout_width="170dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="15dp"-->
+<!--                    android:layout_marginBottom="20dp"-->
+<!--                    android:background="@drawable/clickable_button_background"-->
+<!--                    android:padding="15dp"-->
+<!--                    app:srcCompat="@drawable/vec_diary" />-->
+
+<!--                <ImageButton-->
+<!--                    android:id="@+id/rehab_button"-->
+<!--                    android:layout_width="170dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="15dp"-->
+<!--                    android:layout_marginBottom="20dp"-->
+<!--                    android:background="@drawable/clickable_button_background"-->
+<!--                    android:padding="15dp"-->
+<!--                    android:visibility="gone"-->
+<!--                    app:srcCompat="@drawable/vec_lungs" />-->
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/media_buttons_container"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:visibility="gone">-->
+
+<!--                    <ImageButton-->
+<!--                        android:id="@+id/camera_button"-->
+<!--                        android:layout_width="0dip"-->
+<!--                        android:layout_height="90dp"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@drawable/clickable_button_background"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:scaleType="fitCenter"-->
+<!--                        app:srcCompat="@drawable/vec_camera" />-->
+
+<!--                    <ImageButton-->
+<!--                        android:id="@+id/video_button"-->
+<!--                        android:layout_width="0dip"-->
+<!--                        android:layout_height="90dp"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@drawable/clickable_button_background"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:scaleType="fitCenter"-->
+<!--                        app:srcCompat="@drawable/vec_video" />-->
+
+<!--                    <ImageButton-->
+<!--                        android:id="@+id/audio_button"-->
+<!--                        android:layout_width="0dip"-->
+<!--                        android:layout_height="90dp"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@drawable/clickable_button_background"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:scaleType="fitCenter"-->
+<!--                        app:srcCompat="@drawable/vec_microphone" />-->
+
+<!--                    <ImageButton-->
+<!--                        android:id="@+id/text_button"-->
+<!--                        android:layout_width="0dip"-->
+<!--                        android:layout_height="90dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@drawable/clickable_button_background"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:scaleType="fitCenter"-->
+<!--                        app:srcCompat="@drawable/vec_comment" />-->
+
+
+<!--                </LinearLayout>-->
+
+<!--            </LinearLayout>-->
+
+<!--        </LinearLayout>-->
+
+
+
+<!--    </FrameLayout>-->
+
+
+<!--</RelativeLayout>-->
+
+<!--&lt;!&ndash;    android:background="?attr/colorPrimaryDark"&ndash;&gt;-->
+
