--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,22 +1,20 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <style name="navTextInactive">
+        <item name="android:textSize">19sp</item>
+    </style>
+
+    <style name="navTextActive">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Base application theme disabled for customized app bar -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <!-- ping add: -->
-<!--        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>-->
     </style>
-
-
-    <!-- Style to replace actionbar overflow icon. set item 'android:actionOverflowButtonStyle' in AppTheme -->
-<!--    <style name="MyActionButtonOverflow" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">-->
-<!--        <item name="android:src">@drawable/ic_update</item>-->
-<!--        <item name="android:background">?android:attr/actionBarItemBackground</item>-->
-<!--        <item name="android:contentDescription">"Lala"</item>-->
-<!--    </style>-->
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
